cdebconf (0.76) UNRELEASED; urgency=low

  NOTE: Not for sarge.
  * Colin Watson
    - Add draft plugins specification.
    - Append '\n' to debug messages automatically when printing to stderr,
      so that they aren't needed in every string.

 -- Colin Watson <cjwatson@debian.org>  Tue, 19 Apr 2005 14:45:09 +1000

cdebconf (0.75) experimental; urgency=low

  NOTE: Not for sarge.
  * Colin Watson
    - Add an INFO command, which may (depending on the frontend) display an
      out-of-band informative message. Unlike inputting a note, this doesn't
      require an acknowledgement from the user. Like PROGRESS INFO,
      frontends should display the info persistently until some other info
      comes along. In the newt frontend, this appears as text at the top
      left-hand corner of the screen; no other frontends implement it yet.
    - Fix text frontend segfault when encountering empty elements in Choices
      field (closes: #256557).
    - Fix memory leaks in METAGET, PROGRESS, and SETTITLE commands.
    - Make the text frontend output a blank line before the first title in
      go() if it was already displaying a progress bar (closes: #271707).
    - If possible, clean source directory in 'debian/rules clean' so that
      test builds don't make it into source packages.
    - cdebconf-udeb provides debconf-2.0.
    - Enable stack driver.
    - Move answers to password questions out of
      /var/lib/cdebconf/questions.dat to /var/lib/cdebconf/passwords.dat.
    - Some const-correctness improvements.
    - Add iterate methods to rfc822db, making debconf-copydb and
      debconf-dumpdb work (closes: #213266). This uses a horrible
      non-thread-safe technique involving building a temporary list with a
      pointer to each node in order, which will of course use a fair amount
      of memory, because the twalk() interface doesn't allow for anything
      better. If we ever switch to a completely different cache mechanism,
      this can go away.