@@ -5,6 +5,10 @@ cdebconf (0.76) UNRELEASED; urgency=low
     - Add draft plugins specification.
     - Append '\n' to debug messages automatically when printing to stderr,
       so that they aren't needed in every string.
+    - Tidy up libdebconfclient namespace: rename debconf_commandf to
+      debconfclient_commandf and make it static. Doesn't seem to affect any
+      current users, and if it does, they should have been using
+      debconf->commandf() instead.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 19 Apr 2005 14:45:09 +1000
 
